Fixing Figma 262, spacing on colocated event banner

--- a/web/wp-content/themes/cncf-twenty-two/source/scss/detached/kccnc-eu-22-transparency.scss
+++ b/web/wp-content/themes/cncf-twenty-two/source/scss/detached/kccnc-eu-22-transparency.scss
@@ -1802,7 +1802,7 @@ html {
 		color: $kccnc-eu-22-white;
 		&__title {
 			font-weight: 700;
-			font-size: 28px;
+			font-size: 26px;
 			@media (min-width: 1000px) {
 				font-size: 34px;
 			}
@@ -1819,7 +1819,7 @@ html {
 			width: 100%;
 			height: 1px;
 			background-color: $kccnc-eu-22-white;
-			margin-top: 10px;
+			margin-top: 25px;
 			margin-bottom: 30px;
 			@media (min-width: 1000px) {
 				margin-top: 30px;
@@ -1831,6 +1831,21 @@ html {
 			margin-top: 30px;
 			@media (min-width: 1000px) {
 				margin-top: 60px;
+			}
+			.wp-block-button__link {
+				font-size: 13px;
+				padding-left: 10px;
+				padding-right: 10px;
+				@media (min-width: 412px) {
+					font-size: 14px;
+					padding-left: 30px;
+					padding-right: 30px;
+				}
+				@media (min-width: 1200px) {
+					font-size: 16px;
+					padding-left: 40px;
+					padding-right: 40px;
+				}
 			}
 		}
 	}
